Support for array types; Tests | p7